mule-user-guide/v/3.2/rmi-transport-reference.adoc
=  RMI传输参考

RMI传输通过 http://en.wikipedia.org/wiki/JRMP[JRMP]发送和接收Mule事件。这个传输有一个调度器，它调用一个RMI方法和一个轮询接收器，它重复执行相同的操作。

您可以按如下方式配置RMI传输：

[source, xml, linenums]
----
<mule xmlns="http://www.mulesoft.org/schema/mule/core"
       xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
       xmlns:spring="http://www.springframework.org/schema/beans"
       xmlns:rmi="http://www.mulesoft.org/schema/mule/rmi"
       xsi:schemaLocation="
               http://www.springframework.org/schema/beans http://www.springframework.org/schema/beans/spring-beans-2.5.xsd
               http://www.mulesoft.org/schema/mule/core http://www.mulesoft.org/schema/mule/core/3.2/mule.xsd
               http://www.mulesoft.org/schema/mule/rmi http://www.mulesoft.org/schema/mule/rmi/3.2/mule-rmi.xsd">
    <!-- specify the actual class of the JNDI factory you want to use -->
    <spring:bean name="jndiFactory" class="org.mule.transport.rmi.MuleRMIFactory"/>

    <spring:bean name="jndiContext" factory-bean="jndiFactory" factory-method="create"/>

    <rmi:connector name="rmi" jndiContext-ref="jndiContext" securityPolicy="rmi.policy"/>

    <rmi:endpoint name="hello" host="localhost" port="1099" object="HelloServer"
              method="hello" methodArgumentTypes="java.lang.String"/>
----

连接器查找`method`和`methodArgumentTypes`。它使用有效载荷作为参数。

==  JNP连接器

如果要使用Java命名协议绑定到远程对象，则可以使用JNP连接器，而不是简单地使用`jnp`命名空间。

[source, xml, linenums]
----
<mule xmlns="http://www.mulesoft.org/schema/mule/core"
       xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
       xmlns:spring="http://www.springframework.org/schema/beans"
       xmlns:jnp="http://www.mulesoft.org/schema/mule/jnp"
       xsi:schemaLocation="
               http://www.springframework.org/schema/beans http://www.springframework.org/schema/beans/spring-beans-2.5.xsd
               http://www.mulesoft.org/schema/mule/core http://www.mulesoft.org/schema/mule/core/3.2/mule.xsd
               http://www.mulesoft.org/schema/mule/jnp http://www.mulesoft.org/schema/mule/jnp/3.2/mule-jnp.xsd">

    <!-- specify the actual class of the JNDI factory you want to use -->
    <spring:bean name="jndiFactory" class="org.mule.transport.rmi.MuleRMIFactory"/>
    <spring:bean name="jndiContext" factory-bean="jndiFactory" factory-method="create"/>

    <jnp:connector name="jnp" jndiContext-ref="jndiContext" securityPolicy="rmi.policy"/>

    <jnp:endpoint name="Sender2" host="localhost" port="1099" object="MatchingUMO" method="reverseString"/>
...
----

== 配置参考

== 连接器

<connector...>的{​​{0}}属性

[%header%autowidth.spread]
|===
| {名称{1}}输入 |必 |缺省 |说明
轮询连接之间的周期（毫秒）|轮询频率 |长 |否 |   |。
| securityManager-ref  |字符串 |否 |   |应该使用的安全管理器的Bean引用。
| securityPolicy  |字符串 |否 |   |用于启用连接的安全策略（文件名）。
| serverClassName  |字符串 |否 |   |目标类名称。
| serverCodebase  |字符串 |否 |   |目标方法。
|===

无<connector...>的子元素


== 端点

<endpoint...>的{​​{0}}属性

[%header%autowidth.spread]
|===
| {名称{1}}输入 |必 |缺省 |说明
|主机 |字符串 |否 |   |端点主机名。
|端口 |端口号 |否 |   |建立连接时使用的端口号。
|对象 |字符串 |否 |   |通过RMI调用的对象的类名。
|方法 |字符串 |否 |   |要调用的方法的名称。
| methodArgumentTypes  | string  | no  |   |要调用的方法的逗号分隔参数类型。例如，"java.lang.String"。
|===

无<endpoint...>的子元素



== 架构

*  http://www.mulesoft.org/schema/mule/rmi/3.2/mule-rmi.xsd[RMI架构]
*  http://www.mulesoft.org/docs/site/3.3.0/schemadocs/schemas/mule-rmi_xsd/schema-overview.html[RMI架构概述]
*  http://www.mulesoft.org/schema/mule/jnp/3.2/mule-jnp.xsd[JNP模式]
*  http://www.mulesoft.org/docs/site/3.3.0/schemadocs/schemas/mule-jnp_xsd/schema-overview.html[JNP模式概述]
